Fix file paths and enable landmark drawing

--- a/mediapipe.ipynb
+++ b/mediapipe.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture(\"nub67.gif\")\n",
+    "cap = cv2.VideoCapture(assets\"nub67.gif\")\n",
     "loop_count = 0\n",
     "max = 3\n",
     "while True:\n",
@@ -119,14 +119,14 @@
     "        results = holistic.process(image)\n",
     "        image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
     "        #face landmarks\n",
-    "        #mp_drawing.draw_landmarks(image, results.face_landmarks, mp_holistic.FACEMESH_CONTOURS,mp_drawing.DrawingSpec((255,0,0),2,1))\n",
+    "        mp_drawing.draw_landmarks(image, results.face_landmarks, mp_holistic.FACEMESH_CONTOURS,mp_drawing.DrawingSpec((255,0,0),2,1))\n",
     "        #right hand\n",
     "        mp_drawing.draw_landmarks(image, results.right_hand_landmarks, mp_holistic.HAND_CONNECTIONS,mp_drawing.DrawingSpec((157,0,255),2,2))\n",
     "        print(results.right_hand_landmarks)\n",
     "        #left hand\n",
-    "        #mp_drawing.draw_landmarks(image, results.left_hand_landmarks, mp_holistic.HAND_CONNECTIONS,mp_drawing.DrawingSpec((157,0,255),2,2))\n",
+    "        mp_drawing.draw_landmarks(image, results.left_hand_landmarks, mp_holistic.HAND_CONNECTIONS,mp_drawing.DrawingSpec((157,0,255),2,2))\n",
     "        #pose detection\n",
-    "        #mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_holistic.POSE_CONNECTIONS,mp_drawing.DrawingSpec((0,255,0),3,1))\n",
+    "        mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_holistic.POSE_CONNECTIONS,mp_drawing.DrawingSpec((0,255,0),3,1))\n",
     "        cv2.imshow(\"Raw_Webcam_Feed\", image)\n",
     "\n",
     "        if cv2.waitKey(20) & 0xFF == ord('d'):\n",
@@ -254,8 +254,8 @@
     "        \n",
     "        if (sim_1 > 0.95) and (sim_2 > 0.95):\n",
     "            cv2.destroyAllWindows()\n",
-    "            img = cv2.imread('femboy_1.png')\n",
-    "            cv2.imshow('femboy', img)\n",
+    "            img = cv2.imread(assets\'speed_1.png')\n",
+    "            cv2.imshow('speed', img)\n",
     "            cv2.waitKey(10000)\n",
     "            cv2.destroyAllWindows()\n",
     "            break\n",
