Fix file path syntax in mediapipe.ipynb

--- a/mediapipe.ipynb
+++ b/mediapipe.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture(assets\"nub67.gif\")\n",
+    "cap = cv2.VideoCapture(\"nub67.gif\")\n",
     "loop_count = 0\n",
     "max = 3\n",
     "while True:\n",
@@ -254,7 +254,7 @@
     "        \n",
     "        if (sim_1 > 0.95) and (sim_2 > 0.95):\n",
     "            cv2.destroyAllWindows()\n",
-    "            img = cv2.imread(assets\'speed_1.png')\n",
+    "            img = cv2.imread(\'speed_1.png')\n",
     "            cv2.imshow('speed', img)\n",
     "            cv2.waitKey(10000)\n",
     "            cv2.destroyAllWindows()\n",
